tests/NormalTests/paczka1/small_fuzzy/20733897.err
Error in line 2: Vfd A743 23,03
Error in line 10: U5EuS2Gffb1 A743 53,9
Error in line 9: 7jQ1fDuH A743 62,1
